# toyexp

./: .gitignore  GETTING_STARTED.md  README.md  pyproject.toml
report/: report.tex
toyexp/common/: analyze_results.py  config.py  datasets.py  integrate.py  logging_utils.py  losses.py  utils.py
toyexp/configs/: config_lie.yaml  config_proj.yaml  config_recon.yaml
toyexp/scripts/: run_mode_comparison.py  train_lie.py  train_proj.py  train_recon.py
